@@ -30,10 +30,12 @@
 				$qs = array();
 				
 				foreach ($model->getList() as $key => $val) {
-					if (is_object($val) && $val instanceof Stringable)
-						$val = $val->toString();
-					else
-						continue;
+					if (is_object($val)) {
+						if ($val instanceof Stringable)
+							$val = $val->toString();
+						else
+							continue;
+					}
 					
 					$qs[] = "{$key}={$val}";
 				}
